--- a/index.html
+++ b/index.html
@@ -4,16 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChessxBoard Demo</title>
+    <script>
+      function populatePieces() {
+        const board = document.querySelector("#board")
+        board.pieces = {
+          a1: { color: "white", pieceType: "rook" },
+          b1: { color: "white", pieceType: "knight" },
+          c1: { color: "white", pieceType: "bishop" },
+          d1: { color: "white", pieceType: "queen" },
+          e1: { color: "white", pieceType: "king" },
+          f1: { color: "white", pieceType: "bishop" },
+          g1: { color: "white", pieceType: "knight" },
+          h1: { color: "white", pieceType: "rook" },
+          a2: { color: "white", pieceType: "pawn" },
+          b2: { color: "white", pieceType: "pawn" },
+          c2: { color: "white", pieceType: "pawn" },
+          d2: { color: "white", pieceType: "pawn" },
+          e2: { color: "white", pieceType: "pawn" },
+          f2: { color: "white", pieceType: "pawn" },
+          g2: { color: "white", pieceType: "pawn" },
+          h2: { color: "white", pieceType: "pawn" },
+          a8: { color: "black", pieceType: "rook" },
+          b8: { color: "black", pieceType: "knight" },
+          c8: { color: "black", pieceType: "bishop" },
+          d8: { color: "black", pieceType: "queen" },
+          e8: { color: "black", pieceType: "king" },
+          f8: { color: "black", pieceType: "bishop" },
+          g8: { color: "black", pieceType: "knight" },
+          h8: { color: "black", pieceType: "rook" },
+          a7: { color: "black", pieceType: "pawn" },
+          b7: { color: "black", pieceType: "pawn" },
+          c7: { color: "black", pieceType: "pawn" },
+          d7: { color: "black", pieceType: "pawn" },
+          e7: { color: "black", pieceType: "pawn" },
+          f7: { color: "black", pieceType: "pawn" },
+          g7: { color: "black", pieceType: "pawn" },
+          h7: { color: "black", pieceType: "pawn" },
+        }
+      }
+    </script>
   </head>
-  <body>
+  <body onload="populatePieces()">
     <style>
-      .wrapper {
+      #board {
+        display: inline-block;
         max-width: 28rem;
       }
     </style>
-    <div class="wrapper">
-      <chessx-board></chessx-board>
-    </div>
+    <chessx-board id="board" orientation="white" interactive></chessx-board>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
