Add type='module' to script definition in demo page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChessxBoard Demo</title>
-    <script>
+    <script type="module">
       window.addEventListener("DOMContentLoaded", () => {
         const board = document.querySelector("#board")
         board.pieces = {
