Add getFen() method

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module">
       window.addEventListener("DOMContentLoaded", () => {
         const board = document.getElementById("board")
-        board.pieces = {
+        board.position = {
           a1: { color: "white", pieceType: "rook" },
           b1: { color: "white", pieceType: "knight" },
           c1: { color: "white", pieceType: "bishop" },
