--- a/index.html
+++ b/index.html
@@ -4,46 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChessxBoard Demo</title>
-    <script>
+    <script type="module">
       window.addEventListener("DOMContentLoaded", () => {
-        const board = document.querySelector("#board")
-        board.pieces = {
-          a1: { color: "white", pieceType: "rook" },
-          b1: { color: "white", pieceType: "knight" },
-          c1: { color: "white", pieceType: "bishop" },
-          d1: { color: "white", pieceType: "queen" },
-          e1: { color: "white", pieceType: "king" },
-          f1: { color: "white", pieceType: "bishop" },
-          g1: { color: "white", pieceType: "knight" },
-          h1: { color: "white", pieceType: "rook" },
-          a2: { color: "white", pieceType: "pawn" },
-          b2: { color: "white", pieceType: "pawn" },
-          c2: { color: "white", pieceType: "pawn" },
-          d2: { color: "white", pieceType: "pawn" },
-          e2: { color: "white", pieceType: "pawn" },
-          f2: { color: "white", pieceType: "pawn" },
-          g2: { color: "white", pieceType: "pawn" },
-          h2: { color: "white", pieceType: "pawn" },
-          a8: { color: "black", pieceType: "rook" },
-          b8: { color: "black", pieceType: "knight" },
-          c8: { color: "black", pieceType: "bishop" },
-          d8: { color: "black", pieceType: "queen" },
-          e8: { color: "black", pieceType: "king" },
-          f8: { color: "black", pieceType: "bishop" },
-          g8: { color: "black", pieceType: "knight" },
-          h8: { color: "black", pieceType: "rook" },
-          a7: { color: "black", pieceType: "pawn" },
-          b7: { color: "black", pieceType: "pawn" },
-          c7: { color: "black", pieceType: "pawn" },
-          d7: { color: "black", pieceType: "pawn" },
-          e7: { color: "black", pieceType: "pawn" },
-          f7: { color: "black", pieceType: "pawn" },
-          g7: { color: "black", pieceType: "pawn" },
-          h7: { color: "black", pieceType: "pawn" },
-        }
-        document.querySelector("#btn-flip").addEventListener("click", () => {
-          board.orientation = board.orientation === "white" ? "black" : "white"
+        document.getElementById("btn-flip").addEventListener("click", () => {
+          board.orientation = board.orientation === "black" ? "white" : "black"
         })
+        document
+          .getElementById("btn-position-start")
+          .addEventListener("click", () => {
+            board.fen = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR"
+          })
+        document
+          .getElementById("btn-position-puzzle")
+          .addEventListener("click", () => {
+            board.fen = "8/5p2/8/2b2k2/2P4P/4rPP1/R5K1/8"
+          })
+        document
+          .getElementById("btn-position-empty")
+          .addEventListener("click", () => {
+            board.position = {}
+          })
       })
     </script>
   </head>
@@ -59,6 +39,7 @@
         id="board"
         class="max-w-md"
         orientation="white"
+        fen="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR"
         interactive
       ></chessx-board>
       <div>
@@ -67,6 +48,24 @@
           class="bg-green-800 text-gray-100 text-sm px-3 py-2 rounded-md hover:bg-green-700 active:bg-green-600"
         >
           Flip
+        </button>
+        <button
+          id="btn-position-start"
+          class="bg-green-800 text-gray-100 text-sm px-3 py-2 rounded-md hover:bg-green-700 active:bg-green-600"
+        >
+          Start position
+        </button>
+        <button
+          id="btn-position-puzzle"
+          class="bg-green-800 text-gray-100 text-sm px-3 py-2 rounded-md hover:bg-green-700 active:bg-green-600"
+        >
+          Puzzle position
+        </button>
+        <button
+          id="btn-position-empty"
+          class="bg-green-800 text-gray-100 text-sm px-3 py-2 rounded-md hover:bg-green-700 active:bg-green-600"
+        >
+          Empty
         </button>
       </div>
     </main>
