Fix label of Show coords button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           })
         document.getElementById("btn-coords").addEventListener("click", (e) => {
           board.hideCoords = !board.hideCoords
-          e.target.innerText = board.hideCoords ? "Hide coords" : "Show coords"
+          e.target.innerText = board.hideCoords ? "Show coords" : "Hide coords"
         })
         document.getElementById("btn-svg").addEventListener("click", (e) => {
           window.showSVG = !window.showSVG
