Add non-centered SVG to square

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <template id="svg-e4">
       <svg
         xmlns="http://www.w3.org/2000/svg"
+        class="w-1/3 h-1/3 bottom-1 right-1 top-auto left-auto"
         fill="none"
         viewBox="0 0 24 24"
         stroke="currentColor"
