--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
+        role="img"
         viewBox="0 0 24 24"
         stroke="currentColor"
       >
@@ -95,6 +96,7 @@
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 20 20"
+        role="img"
         fill="currentColor"
         class="text-orange-300"
       >
@@ -107,6 +109,7 @@
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="w-1/3 h-1/3 bottom-1 right-1 top-auto left-auto"
+        role="img"
         fill="none"
         viewBox="0 0 24 24"
         stroke="currentColor"
