Add dark mode background for dev purposes

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
       </svg>
     </template>
     <main
-      class="flex flex-col items-center gap-y-4 bg-gray-100 min-h-screen py-8 font-sans font-semibold"
+      class="flex flex-col items-center gap-y-4 bg-gray-100 min-h-screen py-8 font-sans font-semibold dark:bg-gray-900"
     >
-      <h1 class="text-2xl">
+      <h1 class="text-2xl dark:text-gray-100">
         <code class="font-mono">&lt;chessx-board&gt;</code>
         demo
       </h1>
