--- a/index.html
+++ b/index.html
@@ -8,66 +8,66 @@
     <script type="module" src="/src/index.ts"></script>
     <script type="module">
       window.addEventListener("DOMContentLoaded", () => {
-        const board = document.getElementById("board")
+        const board = document.getElementById("board");
         document.getElementById("btn-flip").addEventListener("click", () => {
-          board.orientation = board.orientation === "black" ? "white" : "black"
-        })
+          board.orientation = board.orientation === "black" ? "white" : "black";
+        });
         document
           .getElementById("btn-interactivity")
           .addEventListener("click", (e) => {
-            board.interactive = !board.interactive
+            board.interactive = !board.interactive;
             e.target.innerText = board.interactive
               ? "Disable interaction"
-              : "Enable interaction"
-          })
+              : "Enable interaction";
+          });
         document
           .getElementById("btn-animation")
           .addEventListener("click", (e) => {
-            board.disableAnimation = !board.disableAnimation
+            board.disableAnimation = !board.disableAnimation;
             e.target.innerText = board.disableAnimation
               ? "Enable animation"
-              : "Disable animation"
-          })
+              : "Disable animation";
+          });
         document.getElementById("btn-coords").addEventListener("click", (e) => {
-          board.hideCoords = !board.hideCoords
-          e.target.innerText = board.hideCoords ? "Show coords" : "Hide coords"
-        })
+          board.hideCoords = !board.hideCoords;
+          e.target.innerText = board.hideCoords ? "Show coords" : "Hide coords";
+        });
         document.getElementById("btn-svg").addEventListener("click", (e) => {
-          window.showSVG = !window.showSVG
-          const svgSquares = ["a3", "c5", "e4"]
+          window.showSVG = !window.showSVG;
+          const svgSquares = ["a3", "c5", "e4"];
           if (window.showSVG) {
             svgSquares.forEach((s) => {
               const square = document
                 .getElementById(`svg-${s}`)
-                .content.firstElementChild.cloneNode(true)
-              square.slot = s
-              document.getElementById("board").appendChild(square)
-            })
+                .content.firstElementChild.cloneNode(true);
+              square.slot = s;
+              document.getElementById("board").appendChild(square);
+            });
           } else {
             svgSquares.forEach((s) => {
               document
                 .getElementById("board")
-                .removeChild(document.querySelector(`#board [slot="${s}"]`))
-            })
+                .removeChild(document.querySelector(`#board [slot="${s}"]`));
+            });
           }
-          e.target.innerText = window.showSVG ? "Hide SVGs" : "Show SVGs"
-        })
+          e.target.innerText = window.showSVG ? "Hide SVGs" : "Show SVGs";
+        });
         document
           .getElementById("btn-position-start")
           .addEventListener("click", () => {
-            board.fen = "start"
-          })
+            board.fen = "start";
+          });
         document
           .getElementById("btn-position-puzzle")
           .addEventListener("click", () => {
-            board.fen = "8/5p2/8/2b2k2/2P4P/4rPP1/R5K1/8"
-          })
+            board.fen = "8/5p2/8/2b2k2/2P4P/4rPP1/R5K1/8";
+          });
         document
           .getElementById("btn-position-empty")
           .addEventListener("click", () => {
-            board.position = {}
-          })
-      })
+            board.position = {};
+          });
+      });
     </script>
     <style type="text/tailwindcss">
       .btn {
