--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
     <template id="svg-a3">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -115,11 +115,11 @@
       </svg>
     </template>
     <main
-      class="flex flex-col px-2 items-center gap-y-4 bg-gray-100 min-h-screen py-8 font-sans font-semibold dark:bg-gray-900"
+      class="mx-auto max-w-2xl flex flex-col px-3 items-center gap-y-3 min-h-screen py-8 font-sans"
     >
-      <h1 class="text-xl sm:text-2xl dark:text-gray-100">
+      <h1 class="text-xl text-center font-semibold max-w-lg sm:text-2xl">
         <code class="font-mono">&lt;chessx-board&gt;</code>
-        demo
+        development demo
       </h1>
       <chessx-board
         id="board"
