Add support for setting eligible move targets

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChessxBoard Demo</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+    <script src="https://unpkg.com/chess.js@0.12.0/chess.js"></script>
     <script type="module" src="/src/index.ts"></script>
     <script type="module">
       window.addEventListener("DOMContentLoaded", () => {
         const board = document.getElementById("board");
+        let game = new Chess();
         document.getElementById("btn-flip").addEventListener("click", () => {
           board.orientation = board.orientation === "black" ? "white" : "black";
         });
