--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             );
           }
         });
-        board.addEventListener("movedone", (e) => {
+        board.addEventListener("moveend", (e) => {
           console.log(
-            `movedone: ${e.detail.piece.color} ${e.detail.piece.pieceType} from ${e.detail.from}-${e.detail.to}`
+            `moveend: ${e.detail.piece.color} ${e.detail.piece.pieceType} from ${e.detail.from}-${e.detail.to}`
           );
           window.placement = board.fen;
           updateGame();
@@ -182,7 +182,7 @@
       class="flex flex-col items-center max-w-2xl min-h-screen px-3 py-8 mx-auto font-sans gap-y-5"
     >
       <h1 class="max-w-lg text-xl font-semibold text-center sm:text-2xl">
-        <code class="font-mono">gchessboard</code>
+        <code class="font-mono">&lt;g-chess-board&gt;</code>
         development demo
       </h1>
       <g-chess-board
