feat: Replace Vite with Rollup as the bundler
The Vite bundler is restrictive in terms of exporting TypeScript
dependencies. Use Rollup for more control.

- Install Rollup and replace Vite config
- Inline url() assets using PostCSS plugin
- Add `web-dev-server` to replace Vite's server
- Add custom-elements.json
- Add `rollup-plugin-filesize` plugin to production flow
- Add `rollup-plugin-dts` to export types as bundled file

Other changes:
- Rename ChessBoardElement file to be consistent with name of actual class
- Customize types of CustomEvent

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>gchessboard Demo</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
     <script src="https://unpkg.com/chess.js@0.12.0/chess.js"></script>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/dist/gchessboard.es.js"></script>
     <script type="module">
       window.addEventListener("DOMContentLoaded", () => {
         const board = document.getElementById("board");
